--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
+    "request-ip": "^2.1.3",
     "validator": "^13.7.0"
   }
 }
