--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
     "request-ip": "^2.1.3",
+    "social-links": "^1.4.5",
     "validator": "^13.7.0"
   }
 }
