--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,8 @@
   },
   "author": "Keshav Garg",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
   "dependencies": {
+    "nodemon": "^2.0.15",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cloudinary": "^1.28.0",
