--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,13 +1,13 @@
-mongoURI = "mongodb://mongo:27017/blog"
+mongoURI = "mongodb+srv://blogScape_database_admin:CijFhNPVyGq31uIz@blogscape.n3mefts.mongodb.net/?retryWrites=true&w=majority"
 port = 5000
 JWT_SECRET = !DE94#d5&%vd56fU^$)fss$@d69de
 JWT_EXPIRY = "1d"
 COOKIE_EXPIRY = 1
 SMPT_HOST = smtp.gmail.com
-SMPT_PORT = 467
+SMPT_PORT = 465
 SMPT_SERVICE = gmail
 SMPT_MAIL = ad382132@gmail.com
-SMPT_PASSWORD = 8700016795
+SMPT_PASSWORD = ggduqrdxunsgsarv
 CLOUDINARY_NAME = doizgsvpt
 CLOUDINARY_API_KEY = 696814163774652
 CLOUDINARY_API_SECRET = IIxWF7TtpGj31GtZXBhKYmq6TTk
