--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "backend",
+  "name": "blogscape_backend",
   "version": "1.0.0",
-  "description": "Backend for MERN Blog App",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "node index.js"
   },
   "author": "Keshav Garg",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.15",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.1",
-    "cloudinary": "^1.28.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "express-async-handler": "^1.2.0",
-    "express-fileupload": "^1.2.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.4",
-    "nodemailer": "^6.7.2",
-    "request-ip": "^2.1.3",
-    "social-links": "^1.4.5",
-    "validator": "^13.7.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "validator": "^13.9.0"
   }
 }
