--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "frontend",
+  "name": "blogscape",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.3.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.24.0",
-    "dotenv": "^11.0.0",
-    "javascript-time-ago": "^2.3.10",
-    "react": "^17.0.2",
+    "axios": "^1.3.5",
+    "react": "^18.2.0",
     "react-alert": "^7.0.3",
-    "react-dom": "^17.0.2",
-    "react-multi-ref": "^1.0.0",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
-    "react-time-ago": "^7.1.7",
-    "react-timeago": "^6.2.1",
-    "redux": "^4.1.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "react-timeago": "^7.1.0",
+    "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "social-links": "^1.4.5",
-    "web-vitals": "^2.1.2"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "social-links": "^1.10.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.9"
+    "@redux-devtools/core": "^3.13.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "tailwindcss": "^3.3.1"
   }
 }
